Fix docs table wrapper border color in dark mode (#11468)

--- a/docs/.vuepress/theme/styles/theme/darkmode.styl
+++ b/docs/.vuepress/theme/styles/theme/darkmode.styl
@@ -415,6 +415,10 @@ html.theme-dark {
 
     //Page
     .page {
+        .table-wrapper {
+            box-shadow: 0 0 0 1px $borderColor 
+        }
+
         .breadcrumbs {
             a {
                 color: $text2Color
